# nude-generator

./: .gitignore  ANALYSIS_CURRENT_RESULTS.md  DELIVERY_SUMMARY.md  FINAL_ANALYSIS_IMPROVEMENTS.md  GAN_RESEARCH.md  GAN_UPDATE_SUMMARY.md  LICENSE  PRETRAINED_GAN_RESEARCH.md  README.md  demo_generation.py  pyproject.toml  requirements.txt  setup.py  simple_pretrained_test.py  simple_test.py  test_final_optimized.py  test_gan_implementation.py  test_lightweight_real.py  test_minimal_real.py  test_perfect_simple.py  test_precise_inpainting.py  test_pretrained_gan.py  test_real_nude_generator.py  test_with_real_image.py
configs/: default.yaml  fast.yaml  high_quality.yaml
examples/: example_usage.py
src/nude_generator/: __init__.py  cli.py
src/nude_generator/core/: __init__.py  advanced_generator.py  gan_generator.py  generator.py  nsfw_stable_diffusion.py  perfect_nude_generator.py  pretrained_gan.py  real_nude_generator.py  working_nude_generator.py
src/nude_generator/training/: __init__.py  train_gan.py
src/nude_generator/utils/: config.py
tests/: test_nude_generator.py
